--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky install .husky"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-select": "^5.8.0"
