--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prepare": "husky install .husky"
   },
   "dependencies": {
+    "axios": "^1.6.8",
     "classnames": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
